Fixed issue with landscape previews being 2px too small.
The problem was, the margin was only accounting for one border (2px) instead of two borders (4px).

--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,8 @@ body {
 .comicPreviewLandscape {
 	border: 1px solid black;
 	margin: 10px;
-	margin-left: 20px;
-	margin-right: 20px;
+	margin-left: 21px;
+	margin-right: 21px;
 	height: auto;
 	width: 16vw;
 	min-width: 200px;
